--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <title>Rizky-MMC-26</title>
  </head>
 <body>
-<h1> Ini website Rizky Kurniawan Nomor Urut 26</h1>
-<p> Saya berhasil membuat website simple ini sendiri. </p>
+<h1> REXUS GANTENG</h1>
+<p> kamu kontol makasi. </p>
 </body>
 </html>
